@@ -1,5 +1,5 @@
 Place 3rd party libraries and software here. Some components of the INET
-Framework expect to find their external components here. 
+Framework expect to find their external components here.
 
 Supported software:
 
@@ -21,5 +21,5 @@ Supported software:
   $ make cleanall
   $ make
 
-  To test if your build was correct, try the examples/inet/simpletest
+  To test if your build was correct, try the examples/inet/tcpclientserver
   example, and choose a configuration which uses NSC as the TCP implementation.
