@@ -1,29 +1,32 @@
 [Config inet_inet]
 description = "inet_TCP <---> inet_TCP"
-# setting TCP stack implementation
-**.server*.tcpType = "TCP"
-**.client*.tcpType = "TCP"
+# default TCP implementation
 
-[Config nsc_nsc]
-description = "NSC_TCP <---> NSC_TCP"
+[Config linux_linux]
+description = "NSC_TCP (Linux) <---> NSC_TCP (Linux)"
 # setting TCP stack implementation
 **.tcpType = "TCP_NSC"
 
-[Config nsc_inet]
-description = "NSC_TCP <---> inet_TCP"
+[Config linux_freebsd]
+description = "NSC_TCP (Linux) <---> NSC_TCP (FreeBSD)"
+# setting TCP stack implementation
+**.tcpType = "TCP_NSC"
+**.client*.tcp.stackName = "libfreebsd5.3.so"
+
+[Config lwip_inet]
+description = "NSC_TCP (lwIP) <---> inet_TCP"
 # setting TCP stack implementation
 **.server*.tcpType = "TCP_NSC"
-**.client*.tcpType = "TCP"
+**.server*.tcp.stackName = "liblwip.so"
 
-[Config inet_nsc]
-description = "inet_TCP <---> NSC_TCP"
+[Config inet_linux]
+description = "inet_TCP <---> NSC_TCP (linux)"
 # setting TCP stack implementation
-**.server*.tcpType = "TCP"
 **.client*.tcpType = "TCP_NSC"
 
 
 [General]
-network = SimpleTest
+network = ClientServer
 total-stack = 7MB
 tkenv-plugin-path = ../../../etc/plugins
 #debug-on-errors = true
@@ -71,9 +74,6 @@ tkenv-plugin-path = ../../../etc/plugins
 # NIC configuration
 **.ppp[*].queueType = "DropTailQueue" # in routers
 **.ppp[*].queue.frameCapacity = 10  # in routers
-
-# TCP_NSC configuration:
-**.*.tcp.advertisedWindow = 65535
 
 #*.configurator.networkAddress = "10.0.0.0"
 *.configurator.networkAddress = "192.168.1.0"
